@@ -1,0 +1,3 @@
+from pyextrae.common.extrae import *
+
+startProfiling()
